--- a/movies.html
+++ b/movies.html
@@ -33,7 +33,7 @@ $('#message').html("Jquery is loaded with real movie data - version 3 - daniel")
             html+= "</td>";
       
             html+= "<td>";
-            html+= jsonData[i].title;
+            html+= jsonData[i].movieTitle;
             html+= "</td>";
       
             html+= "<td>";
