--- a/movies.html
+++ b/movies.html
@@ -40,7 +40,7 @@ $('#message').html("Jquery is loaded with real movie data - version 4 - daniel")
             html+= jsonData[i].rating;
             html+= "</td>";
       
-            html=+"<td>";
+            html+="<td>";
             html+= jsonData[i].runTime;
             html+= "</td>";
       
